stopped recent list from jumping around while selecting

--- a/app/static/css/boomer.css
+++ b/app/static/css/boomer.css
@@ -245,7 +245,7 @@ body {
 }
 .radio-text-buttons input[type="radio"]:checked + label {
   background-color: black;
-  border-radius: 20px;
+  /*border-radius: 20px;*/
   border-color: #494949;
 }
 
